--- a/dominio/dominio.csproj
+++ b/dominio/dominio.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reparacion.cs" />
     <Compile Include="Tractor.cs" />
+    <Compile Include="UsoStock.cs" />
     <Compile Include="Vehiculo.cs" />
     <Compile Include="Viaje.cs" />
   </ItemGroup>
