--- a/negocio/negocio.csproj
+++ b/negocio/negocio.csproj
@@ -52,8 +52,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReparacionNegocio.cs" />
     <Compile Include="TractorNegocio.cs" />
+    <Compile Include="UsoStockNegocio.cs" />
     <Compile Include="UtilitarioNegocio.cs" />
     <Compile Include="Validaciones.cs" />
+    <Compile Include="VehiculoNegocio.cs" />
     <Compile Include="ViajeNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
