--- a/presentacion/presentacion.csproj
+++ b/presentacion/presentacion.csproj
@@ -118,6 +118,18 @@
     <Compile Include="mecanicos\FrmMecanicos.Designer.cs">
       <DependentUpon>FrmMecanicos.cs</DependentUpon>
     </Compile>
+    <Compile Include="reparaciones\FrmFichaReparaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reparaciones\FrmFichaReparaciones.Designer.cs">
+      <DependentUpon>FrmFichaReparaciones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="reparaciones\FrmHistoriaReparacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reparaciones\FrmHistoriaReparacion.Designer.cs">
+      <DependentUpon>FrmHistoriaReparacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="reparaciones\FrmReparaciones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -227,6 +239,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="mecanicos\FrmMecanicos.resx">
       <DependentUpon>FrmMecanicos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reparaciones\FrmFichaReparaciones.resx">
+      <DependentUpon>FrmFichaReparaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reparaciones\FrmHistoriaReparacion.resx">
+      <DependentUpon>FrmHistoriaReparacion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="reparaciones\FrmReparaciones.resx">
       <DependentUpon>FrmReparaciones.cs</DependentUpon>
