--- a/presentacion/presentacion.csproj
+++ b/presentacion/presentacion.csproj
@@ -118,6 +118,12 @@
     <Compile Include="mecanicos\FrmMecanicos.Designer.cs">
       <DependentUpon>FrmMecanicos.cs</DependentUpon>
     </Compile>
+    <Compile Include="reparaciones\FrmArticuloCantidad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reparaciones\FrmArticuloCantidad.Designer.cs">
+      <DependentUpon>FrmArticuloCantidad.cs</DependentUpon>
+    </Compile>
     <Compile Include="reparaciones\FrmFichaReparaciones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -239,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="mecanicos\FrmMecanicos.resx">
       <DependentUpon>FrmMecanicos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reparaciones\FrmArticuloCantidad.resx">
+      <DependentUpon>FrmArticuloCantidad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="reparaciones\FrmFichaReparaciones.resx">
       <DependentUpon>FrmFichaReparaciones.cs</DependentUpon>
