--- a/negocio/negocio.csproj
+++ b/negocio/negocio.csproj
@@ -49,6 +49,7 @@
     <Compile Include="FurgonNegocio.cs" />
     <Compile Include="MecanicoNegocio.cs" />
     <Compile Include="MovimientoNegocio.cs" />
+    <Compile Include="PersonaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReparacionNegocio.cs" />
     <Compile Include="TractorNegocio.cs" />
