cambio de formato de forms (mov y eventos)

--- a/dominio/dominio.csproj
+++ b/dominio/dominio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Chofer.cs" />
     <Compile Include="Empresa.cs" />
     <Compile Include="Evento.cs" />
+    <Compile Include="Fletero.cs" />
     <Compile Include="Furgon.cs" />
     <Compile Include="Mecanico.cs" />
     <Compile Include="Movimiento.cs" />
