--- a/presentacion/presentacion.csproj
+++ b/presentacion/presentacion.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="articulos\FrmFichaArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="articulos\FrmFichaArticulo.Designer.cs">
+      <DependentUpon>FrmFichaArticulo.cs</DependentUpon>
+    </Compile>
     <Compile Include="articulos\FrmRepuestos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +174,9 @@
     <Compile Include="viajes\FrmViajes.Designer.cs">
       <DependentUpon>FrmViajes.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="articulos\FrmFichaArticulo.resx">
+      <DependentUpon>FrmFichaArticulo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="articulos\FrmRepuestos.resx">
       <DependentUpon>FrmRepuestos.cs</DependentUpon>
     </EmbeddedResource>
